untill error in search item