@@ -1,280 +1,3 @@
-//
-//package com.mahmoud.sales.controller;
-//
-//import com.mahmoud.sales.entity.Person;
-//import com.mahmoud.sales.entity.Phone;
-//import com.mahmoud.sales.handler.PersonHandler;
-//import com.mahmoud.sales.service.PersonService;
-//import com.mahmoud.sales.service.PhoneService;
-//import com.mahmoud.sales.util.SpringFXMLLoader;
-//import javafx.collections.FXCollections;
-//import javafx.collections.ObservableList;
-//import javafx.fxml.FXML;
-//import javafx.fxml.FXMLLoader;
-//import javafx.scene.Parent;
-//import javafx.scene.Scene;
-//import javafx.scene.control.*;
-//import javafx.scene.control.cell.PropertyValueFactory;
-//import javafx.scene.layout.HBox;
-//import javafx.stage.Modality;
-//import javafx.stage.Stage;
-//import org.springframework.stereotype.Controller;
-//import javafx.util.Callback; // Correct import for JavaFX
-//import java.math.BigDecimal;
-//import java.util.List;
-//import java.util.stream.Collectors;
-//
-//@Controller
-//public class SupplierController {
-//
-//    private PhoneService phoneService;
-//
-//    private  PersonService personService;
-//    @FXML
-//    private TableView<Person> personTable;
-//    @FXML
-//    private TableColumn<Person, Integer> idColumn;
-//    @FXML
-//    private TableColumn<Person, String> nameColumn;
-//    @FXML
-//    private TableColumn<Person, String> locationColumn;
-//    @FXML
-//    private TableColumn<Person, String> typeColumn;
-//    @FXML
-//    public TableColumn<Person, BigDecimal> remainingBalanceColumn;
-//    @FXML
-//    private TableColumn<Person, BigDecimal> balanceColumn;
-//    @FXML
-//    private TableColumn<Person, String> phonesColumn;
-//    @FXML
-//    private TableColumn<Person, BigDecimal> transactionAmountColumn;
-//    @FXML
-//    private TableColumn<Person, BigDecimal> paymentAmountColumn;
-//    @FXML
-//    private TextField nameField;
-//    @FXML
-//    private TextField locationField;
-//    @FXML
-//    private TextField typeField;
-//    @FXML
-//    private TextField balanceField;
-//    @FXML
-//    private Label supplierCountLabel;
-//    @FXML
-//    private Label totalOpenBalanceLabel;
-//    @FXML
-//    private Label totalBalanceLabel;
-//    @FXML
-//    private TableColumn<Person, Void> actionColumn; // For buttons
-//
-//    private ObservableList<Person> personList;
-//
-//    @FXML
-//    public void initialize() {
-//        // Manually wire dependencies using SpringFXMLLoader
-//        this.personService = SpringFXMLLoader.loadController(PersonService.class);
-//        this.phoneService = SpringFXMLLoader.loadController(PhoneService.class);
-//        // Set the column resize policy to CONSTRAINED_RESIZE_POLICY
-//        personTable.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY);
-//
-//
-//        // Initialize table columns
-//        idColumn.setCellValueFactory(new PropertyValueFactory<>("id"));
-//        nameColumn.setCellValueFactory(new PropertyValueFactory<>("name"));
-//        locationColumn.setCellValueFactory(new PropertyValueFactory<>("location"));
-//        typeColumn.setCellValueFactory(new PropertyValueFactory<>("type"));
-//        balanceColumn.setCellValueFactory(new PropertyValueFactory<>("openBalance"));
-//        // Add a column for phones
-//        phonesColumn.setCellValueFactory(cellData -> {
-//            Person person = cellData.getValue();
-//            List<Phone> phones = phoneService.findPhonesByPersonId(person.getId());
-//            String phoneNumbers = phones.stream().map(Phone::getPhoneNumber).collect(Collectors.joining(", "));
-//            return new javafx.beans.property.SimpleStringProperty(phoneNumbers);
-//        });
-//
-//        // Add a column for remaining balance
-//        remainingBalanceColumn.setCellValueFactory(cellData -> {
-//            Person person = cellData.getValue();
-//
-//            // Get the remaining balance for the person
-//            BigDecimal remainingBalance = personService.calculateRemainingBalance(person.getId());
-//            BigDecimal obenBalance = person.getOpenBalance();
-//            remainingBalance = obenBalance.add(remainingBalance);
-//
-//            return new javafx.beans.property.SimpleObjectProperty<>(remainingBalance);
-//        });
-//
-//        // Load all persons into the table
-//        loadPersons();
-//
-//        // Add buttons to each row in the "Actions" column
-//        addActionButtonsToTable();
-//    }
-//
-//    // Method to add action buttons to the "Actions" column
-//    private void addActionButtonsToTable() {
-//        Callback<TableColumn<Person, Void>, TableCell<Person, Void>> cellFactory = new Callback<>() {
-//            @Override
-//            public TableCell<Person, Void> call(final TableColumn<Person, Void> param) {
-//                final TableCell<Person, Void> cell = new TableCell<>() {
-//
-//                    private final Button deleteButton = new Button("Delete");
-//                    private final Button editButton = new Button("Edit");
-//                    private final Button viewButton = new Button("View");
-//                    {
-//                        // Add action handlers
-//                        deleteButton.setOnAction(event -> {
-//                            Person person = getTableView().getItems().get(getIndex());
-//                            handleDeletePopup(person);
-//                        });
-//
-//                        editButton.setOnAction(event -> {
-//                            Person person = getTableView().getItems().get(getIndex());
-//                            handleEditPopup(person);
-//                        });
-//
-//                        viewButton.setOnAction(event -> {
-//                            Person person = getTableView().getItems().get(getIndex());
-//                            handleViewPopup(person);
-//                        });
-//                    }
-//
-//                    @Override
-//                    public void updateItem(Void item, boolean empty) {
-//                        super.updateItem(item, empty);
-//                        if (empty) {
-//                            setGraphic(null);
-//                        } else {
-//                            HBox buttons = new HBox(editButton, viewButton, deleteButton);
-//                            buttons.setSpacing(10);
-//                            setGraphic(buttons);
-//                        }
-//                    }
-//                };
-//                return cell;
-//            }
-//        };
-//        actionColumn.setCellFactory(cellFactory);
-//    }
-//
-//    // Handlers for popups
-//    public void handleDeletePopup(Person person) {
-//        // Logic for showing a delete confirmation popup
-//        showPopup("Delete Person", "/fxml/deletePerson.fxml", person);
-//    }
-//
-//    public void handleEditPopup(Person person) {
-//        // Logic for showing an edit form popup
-//        showPopup("Edit Person", "/fxml/editPerson.fxml", person);
-//    }
-//
-//    public void handleViewPopup(Person person) {
-//        // Logic for showing a view details popup
-//        showPopup("View Person", "/fxml/ViewPerson.fxml", person);
-//    }
-//
-//    public void handleAddPersonPopup() {
-//        // Open the Add New Supplier popup window
-//        showPopup("Add New Supplier", "/fxml/addSupplier.fxml", null);
-//    }
-//
-//    @FXML
-//    // General method to show popups
-//    private void showPopup(String title, String fxmlPath, Person person) {
-//        try {
-//            // Load the FXML file
-//            FXMLLoader loader = new FXMLLoader(getClass().getResource(fxmlPath));
-//            Parent root = loader.load();
-//
-//            // Use the common interface to handle the person object instead of using if statements for each action
-//            PersonHandler controller = loader.getController();
-//            controller.setPerson(person); // This works for both Edit , Delete , add and View
-//
-//
-//            // Create a new stage for the popup window
-//            Stage stage = new Stage();
-//            stage.setTitle(title);
-//            stage.setScene(new Scene(root));
-//            stage.initModality(Modality.APPLICATION_MODAL);  // Block interactions with the main window until this one is closed
-//            stage.showAndWait();  // Wait until the popup is closed
-//
-//            // Reload the table after editing
-//            loadPersons();
-//        } catch (Exception e) {
-//            e.printStackTrace();
-//            showAlert(Alert.AlertType.ERROR, title, "Failed to open " + title);
-//        }
-//    }
-//    // Helper method to show alerts
-//    private void showAlert(Alert.AlertType alertType, String title, String message) {
-//        Alert alert = new Alert(alertType);
-//        alert.setTitle(title);
-//        alert.setHeaderText(null);
-//        alert.setContentText(message);
-//        alert.showAndWait();
-//    }
-//
-//    @FXML
-//    public void addPerson() {
-//        // Implement the logic to add a new Person
-//        String name = nameField.getText();
-//        String location = locationField.getText();
-////        String type = typeField.getText();
-//        BigDecimal balance = new BigDecimal(balanceField.getText());
-//
-//
-//        // Automatically set the type as "Supplier"
-//        Person person = new Person();
-//        person.setName(name);
-//        person.setLocation(location);
-//        person.setType("Supplier"); // Set type to Supplier
-//        person.setOpenBalance(balance);
-//
-//        personService.savePerson(person);
-//        loadPersons();  // Reload table
-//    }
-//
-//    @FXML
-//    public void deletePerson() {
-//        Person selectedPerson = personTable.getSelectionModel().getSelectedItem();
-//        if (selectedPerson != null) {
-//            personService.deletePerson(selectedPerson.getId());
-//            loadPersons();  // Reload table
-//        }
-//    }
-//    @FXML
-//    public void loadPersons() {
-//        // Fetch all persons from the service
-//        List<Person> persons = personService.findAllPersons();
-//
-//        // Filter persons to show only those of type 'Supplier'
-//        List<Person> suppliers = persons.stream()
-//                .filter(person -> "Supplier".equals(person.getType()))
-//                .toList();
-//        // Update the supplier count and total open balance
-//        int supplierCount = suppliers.size();
-//        BigDecimal totalBalance = suppliers.stream()
-//                .map(Person::getOpenBalance)
-//                .reduce(BigDecimal.ZERO, BigDecimal::add);
-//
-//        // Update the أجمالى المديونية (Total Remaining Balance)
-//        BigDecimal totalBalanceAll = suppliers.stream()
-//                .map(supplier -> personService.calculateRemainingBalance(supplier.getId())
-//                        .add(supplier.getOpenBalance()))  // remainingBalance = totalTransactions - openBalance
-//                .reduce(BigDecimal.ZERO, BigDecimal::add);  // Sum all remaining balances
-//
-//        // Set the values in the text views
-//        supplierCountLabel.setText("Number of Suppliers: " + supplierCount);
-//        totalOpenBalanceLabel.setText("Total Open Balance: " + totalBalance);
-//        totalBalanceLabel.setText(": أجمالى المديونية" +totalBalanceAll);
-//
-//        // Load the suppliers into the table
-//        ObservableList<Person> supplierData = FXCollections.observableArrayList(suppliers);
-//        personTable.setItems(supplierData);
-//
-//    }
-//}
-//
 package com.mahmoud.sales.controller;
 
 import com.mahmoud.sales.entity.Person;
@@ -299,21 +22,16 @@ import javafx.scene.layout.HBox;
 import javafx.scene.layout.StackPane;
 import javafx.stage.Modality;
 import javafx.stage.Stage;
-import javafx.util.Callback;
 import javafx.util.Duration;
 import org.springframework.stereotype.Controller;
 
 import java.math.BigDecimal;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.util.*;
 
 @Controller
 public class SupplierController {
 
     private static final String TYPE = "Supplier";
-    private static final int PAGE_SIZE = 50;
 
     private PersonService personService;
     private PhoneService phoneService;
@@ -326,9 +44,14 @@ public class SupplierController {
     @FXML private Button refreshButton;
     @FXML private Button addButton;
 
+    @FXML private ComboBox<Integer> pageSizeCombo;
+    @FXML private ComboBox<String> sortCombo;
+
     @FXML private Label supplierCountLabel;
     @FXML private Label totalOpenBalanceLabel;
     @FXML private Label totalBalanceLabel;
+
+    @FXML private Label statusLabel;
 
     @FXML private TableView<Person> personTable;
     @FXML private TableColumn<Person, Integer> idColumn;
@@ -342,23 +65,62 @@ public class SupplierController {
     @FXML private Pagination pagination;
 
     private final ObservableList<Person> tableData = FXCollections.observableArrayList();
-    private Map<Integer, String> phonesByPersonId = Collections.emptyMap();
-    private Map<Integer, BigDecimal> remainingByPersonId = Collections.emptyMap();
+    private Map<Integer, String> phonesByPersonId = Map.of();
+    private Map<Integer, BigDecimal> remainingByPersonId = Map.of();
 
     private PauseTransition searchDebounce;
     private Task<?> runningTask;
+
+    private int pageSize = 50;
+    private String sortField = "name";
+    private boolean sortAsc = true;
 
     @FXML
     public void initialize() {
         this.personService = SpringFXMLLoader.loadController(PersonService.class);
         this.phoneService = SpringFXMLLoader.loadController(PhoneService.class);
 
+        setupCombos();
         setupTable();
         setupSearch();
         setupPagination();
 
         personTable.setItems(tableData);
         loadPageAsync(0);
+    }
+
+    private void setupCombos() {
+        pageSizeCombo.getItems().setAll(25, 50, 100);
+        pageSizeCombo.setValue(50);
+        pageSizeCombo.valueProperty().addListener((obs, oldV, newV) -> {
+            if (newV != null) {
+                pageSize = newV;
+                loadPageAsync(0);
+            }
+        });
+
+        sortCombo.getItems().setAll(
+                "Name (A → Z)",
+                "Name (Z → A)",
+                "Open Balance (Low → High)",
+                "Open Balance (High → Low)"
+        );
+        sortCombo.setValue("Name (A → Z)");
+        sortCombo.valueProperty().addListener((obs, oldV, newV) -> {
+            applySortSelection(newV);
+            loadPageAsync(0);
+        });
+    }
+
+    private void applySortSelection(String selection) {
+        if (selection == null) selection = "Name (A → Z)";
+
+        switch (selection) {
+            case "Name (Z → A)" -> { sortField = "name"; sortAsc = false; }
+            case "Open Balance (Low → High)" -> { sortField = "openBalance"; sortAsc = true; }
+            case "Open Balance (High → Low)" -> { sortField = "openBalance"; sortAsc = false; }
+            default -> { sortField = "name"; sortAsc = true; }
+        }
     }
 
     private void setupTable() {
@@ -379,23 +141,45 @@ public class SupplierController {
             Person p = cd.getValue();
             if (p == null || p.getId() == null) return new SimpleObjectProperty<>(BigDecimal.ZERO);
 
-            // Base remaining = transactions - payments
-            BigDecimal baseRemaining = remainingByPersonId.getOrDefault(p.getId(), BigDecimal.ZERO);
+            BigDecimal baseRemaining = remainingByPersonId.getOrDefault(p.getId(), BigDecimal.ZERO); // trans - pay
             BigDecimal open = (p.getOpenBalance() == null) ? BigDecimal.ZERO : p.getOpenBalance();
 
-            // Your existing rule for suppliers:
-            // displayedTotalBalance = openBalance + (transactions - payments)
-            BigDecimal total = open.add(baseRemaining);
-            return new SimpleObjectProperty<>(total);
+            // Supplier rule: totalBalance = openBalance + (trans - pay)
+            return new SimpleObjectProperty<>(open.add(baseRemaining));
         });
 
-        addActionButtonsToTable();
+        actionColumn.setCellFactory(col -> new TableCell<>() {
+            private final Button deleteButton = new Button("Delete");
+            private final Button editButton = new Button("Edit");
+            private final Button viewButton = new Button("View");
+
+            {
+                deleteButton.getStyleClass().addAll("btn", "btn-danger");
+                editButton.getStyleClass().addAll("btn", "btn-warning");
+                viewButton.getStyleClass().addAll("btn", "btn-primary");
+
+                deleteButton.setOnAction(e -> handleDeletePopup(getTableView().getItems().get(getIndex())));
+                editButton.setOnAction(e -> handleEditPopup(getTableView().getItems().get(getIndex())));
+                viewButton.setOnAction(e -> handleViewPopup(getTableView().getItems().get(getIndex())));
+            }
+
+            @Override
+            protected void updateItem(Void item, boolean empty) {
+                super.updateItem(item, empty);
+                if (empty) {
+                    setGraphic(null);
+                    return;
+                }
+                HBox box = new HBox(viewButton, editButton, deleteButton);
+                box.setSpacing(8);
+                setGraphic(box);
+            }
+        });
     }
 
     private void setupSearch() {
         searchDebounce = new PauseTransition(Duration.millis(300));
         searchDebounce.setOnFinished(e -> loadPageAsync(0));
-
         searchField.textProperty().addListener((obs, oldV, newV) -> searchDebounce.playFromStart());
     }
 
@@ -403,9 +187,7 @@ public class SupplierController {
         pagination.setPageCount(1);
         pagination.setMaxPageIndicatorCount(7);
         pagination.currentPageIndexProperty().addListener((obs, oldV, newV) -> {
-            if (!Objects.equals(oldV, newV)) {
-                loadPageAsync(newV.intValue());
-            }
+            if (!Objects.equals(oldV, newV)) loadPageAsync(newV.intValue());
         });
     }
 
@@ -423,48 +205,6 @@ public class SupplierController {
     @FXML
     public void handleAddPersonPopup() {
         showPopup("Add New Supplier", "/fxml/addSupplier.fxml", null);
-    }
-
-    private void addActionButtonsToTable() {
-        Callback<TableColumn<Person, Void>, TableCell<Person, Void>> cellFactory = param -> new TableCell<>() {
-            private final Button deleteButton = new Button("Delete");
-            private final Button editButton = new Button("Edit");
-            private final Button viewButton = new Button("View");
-
-            {
-                deleteButton.getStyleClass().addAll("btn", "btn-danger");
-                editButton.getStyleClass().addAll("btn", "btn-warning");
-                viewButton.getStyleClass().addAll("btn", "btn-primary");
-
-                deleteButton.setOnAction(event -> {
-                    Person person = getTableView().getItems().get(getIndex());
-                    handleDeletePopup(person);
-                });
-
-                editButton.setOnAction(event -> {
-                    Person person = getTableView().getItems().get(getIndex());
-                    handleEditPopup(person);
-                });
-
-                viewButton.setOnAction(event -> {
-                    Person person = getTableView().getItems().get(getIndex());
-                    handleViewPopup(person);
-                });
-            }
-
-            @Override
-            protected void updateItem(Void item, boolean empty) {
-                super.updateItem(item, empty);
-                if (empty) {
-                    setGraphic(null);
-                    return;
-                }
-                HBox buttons = new HBox(viewButton, editButton, deleteButton);
-                buttons.setSpacing(8);
-                setGraphic(buttons);
-            }
-        };
-        actionColumn.setCellFactory(cellFactory);
     }
 
     public void handleDeletePopup(Person person) {
@@ -501,9 +241,7 @@ public class SupplierController {
     }
 
     private void loadPageAsync(int pageIndex) {
-        if (runningTask != null && runningTask.isRunning()) {
-            runningTask.cancel();
-        }
+        if (runningTask != null && runningTask.isRunning()) runningTask.cancel();
 
         final String q = (searchField.getText() == null) ? "" : searchField.getText().trim();
         final int safeIndex = Math.max(pageIndex, 0);
@@ -511,18 +249,27 @@ public class SupplierController {
         Task<PageBundle> task = new Task<>() {
             @Override
             protected PageBundle call() {
-                var page = personService.findByTypePaged(TYPE, q, safeIndex, PAGE_SIZE);
+                var page = personService.findByTypePaged(TYPE, q, safeIndex, pageSize, sortField, sortAsc);
+
                 List<Person> persons = page.getContent();
-                List<Integer> ids = persons.stream()
-                        .map(Person::getId)
-                        .filter(Objects::nonNull)
-                        .toList();
+                List<Integer> ids = persons.stream().map(Person::getId).filter(Objects::nonNull).toList();
 
                 Map<Integer, String> phonesMap = phoneService.findPhoneNumbersByPersonIds(ids);
                 Map<Integer, BigDecimal> remainingMap = personService.getRemainingBalanceByIds(ids);
+
                 PersonService.Totals totals = personService.getTotalsByTypeAndSearch(TYPE, q);
 
-                return new PageBundle(persons, phonesMap, remainingMap, totals, page.getTotalPages());
+                return new PageBundle(
+                        persons,
+                        phonesMap,
+                        remainingMap,
+                        totals,
+                        page.getTotalPages(),
+                        page.getTotalElements(),
+                        page.getNumber(),
+                        page.getSize(),
+                        page.getNumberOfElements()
+                );
             }
         };
 
@@ -531,11 +278,16 @@ public class SupplierController {
 
         task.setOnSucceeded(e -> {
             PageBundle b = task.getValue();
+
             phonesByPersonId = b.phonesById;
             remainingByPersonId = b.remainingById;
+
             tableData.setAll(b.rows);
+
             updateTotalsUI(b.totals);
             updatePaginationUI(b.totalPages, safeIndex);
+            updateStatusBar(b.totalElements, b.pageNumber, b.pageSize, b.pageElements);
+
             setLoading(false);
         });
 
@@ -553,9 +305,7 @@ public class SupplierController {
 
     private void updatePaginationUI(int totalPages, int currentIndex) {
         int pages = Math.max(totalPages, 1);
-        if (pagination.getPageCount() != pages) {
-            pagination.setPageCount(pages);
-        }
+        if (pagination.getPageCount() != pages) pagination.setPageCount(pages);
         if (pagination.getCurrentPageIndex() != currentIndex) {
             pagination.setCurrentPageIndex(Math.min(currentIndex, pages - 1));
         }
@@ -564,15 +314,24 @@ public class SupplierController {
     private void updateTotalsUI(PersonService.Totals totals) {
         long count = totals.count();
         BigDecimal sumOpen = totals.sumOpenBalance();
-        BigDecimal sumRemaining = totals.sumRemainingBalance();
+        BigDecimal sumRemaining = totals.sumRemainingBalance(); // trans - pay
 
-        // Supplier total balance rule:
-        // totalBalanceAll = sumRemaining + sumOpen
+        // Supplier total balance rule: total = sumRemaining + sumOpen
         BigDecimal totalBalanceAll = sumRemaining.add(sumOpen);
 
         supplierCountLabel.setText(String.valueOf(count));
         totalOpenBalanceLabel.setText(sumOpen.toString());
         totalBalanceLabel.setText(totalBalanceAll.toString());
+    }
+
+    private void updateStatusBar(long total, int pageNumber, int pageSize, int pageElements) {
+        if (total <= 0 || pageElements <= 0) {
+            statusLabel.setText("Showing 0–0 of 0");
+            return;
+        }
+        long from = (long) pageNumber * pageSize + 1;
+        long to = (long) pageNumber * pageSize + pageElements;
+        statusLabel.setText("Showing " + from + "–" + to + " of " + total);
     }
 
     private void setLoading(boolean isLoading) {
@@ -598,6 +357,10 @@ public class SupplierController {
             Map<Integer, String> phonesById,
             Map<Integer, BigDecimal> remainingById,
             PersonService.Totals totals,
-            int totalPages
+            int totalPages,
+            long totalElements,
+            int pageNumber,
+            int pageSize,
+            int pageElements
     ) {}
 }
